<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tnv.myappclc.activity.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/title"
        android:textColor="@color/blue"
        android:textSize="35dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/red"
        android:background="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/tvUser"
            android:layout_width="300dp"
            android:hint="@string/user"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/red"
        android:background="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/tvPass"
            android:inputType="textPassword"
            android:hint="@string/pass"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnCancel"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>
